kubectl-basico/pod-label-1.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-1
  labels:
    env: prod
    app: nginx-web
spec:
  containers:
  - name: container-1
    image: nginx
    resources:
      limits:
        memory: "32Mi"
        cpu: "500m"
    ports:
      - containerPort: 80
