kubectl-basico/pod-label-2.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-2
  labels:
    env: hom
    app: nginx-web
spec:
  containers:
  - name: container-2
    image: nginx
    resources:
      limits:
        memory: "32Mi"
        cpu: "500m"
    ports:
      - containerPort: 80
