kubectl-basico/pod-label-3.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-3
  labels:
    env: dev
    app: nginx-web
spec:
  containers:
  - name: container-3
    image: nginx
    resources:
      limits:
        memory: "32Mi"
        cpu: "500m"
    ports:
      - containerPort: 80
