kubectl-basico/pod-nodename.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-nodename
spec:
  nodeName: aks-nodepool2-27659871-vmss000000
  containers:
  - name: pod-nodename
    image: nginx
    resources:
      limits:
        memory: "28Mi"
        cpu: "100m"
    ports:
      - containerPort: 80
