kubectl-basico/pod-selector.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-selector
  labels:
    name: pod-selector
spec:
  containers:
  - name: pod-selector
    image: nginx
    resources:
      limits:
        memory: "32Mi"
        cpu: "500m"
    ports:
      - containerPort: 80
    nodeSelector:
      ambiente: producao
